# newtonX_assessment

./: .gitignore  README.md  docker-compose.yml  main.py  pyproject.toml  sample_professionals.csv  sample_professionals_40.csv
backend/: .dockerignore  Dockerfile  README.md  pyproject.toml
backend/config/: settings.py  urls.py
backend/professionals/: admin.py  models.py  serializers.py  services.py  test_bulk.py  test_serializers.py  test_services.py  test_upload.py  test_views.py  tests.py  urls.py  views.py
backend/professionals/migrations/: 0001_initial.py  0002_alter_professional_company_name_and_more.py
backend/tests/: test_project.py
frontend/: README.md  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/app/: App.tsx
frontend/src/features/professionals/: index.ts  types.ts
frontend/src/features/professionals/api/: createProfessional.ts  getProfessionalStats.ts  listProfessionals.ts
frontend/src/features/professionals/components/: AddProfessionalModal.tsx  CsvUploadModal.tsx  ProfessionalsTable.tsx  StatsPanel.tsx
frontend/src/features/professionals/hooks/: useCreateProfessional.ts  useProfessionalStats.ts  useProfessionals.ts
frontend/src/features/professionals/pages/: BulkUploadPage.tsx  DashboardPage.tsx
frontend/src/shared/components/: Modal.tsx
frontend/src/shared/lib/: apiClient.ts
