[project]
name = "newtonx-assessment"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2,<5.3",
    "djangorestframework>=3.16,<3.17",
]

[dependency-groups]
dev = [
    "pytest>=8,<9",
    "pytest-django>=4.9,<5",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
pythonpath = ["."]
python_files = ["test_*.py", "*_test.py", "tests.py"]
testpaths = ["."]
